--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "jotai": "^2.2.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
