--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.2",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "firebase": "^10.1.0",
@@ -28,8 +29,10 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-quill": "^2.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "encoding": "^0.1.13"
