--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
     "@auth/firebase-adapter": "^1.0.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -22,6 +25,7 @@
     "jotai": "^2.2.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
@@ -30,6 +34,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
+    "styled-components": "^6.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
